# scrap

./: .gitignore  README.md  pyproject.toml
assistant/: data.json  manage.py
assistant/assistant/: middleware.py  settings.py  urls.py
assistant/contacts/: models.py  urls.py  views.py
assistant/contacts/templates/contacts/: add_contact.html  contact_list.html  delete_contact.html  edit_contact.html  search_contacts.html  upcoming_birthdays.html
assistant/docs/: forms.py  models.py  urls.py  views.py
assistant/docs/templates/docs/: user_files.html
assistant/locale/en/LC_MESSAGES/: django.po
assistant/locale/uk/LC_MESSAGES/: django.po
assistant/news/: context_processors.py  models.py  scrap_news.py  urls.py  views.py
assistant/news/migrations/: 0002_topic_alter_news_published_at_alter_news_url_and_more.py  0003_alter_news_topic.py
assistant/news/static/news/: style.css
assistant/news/templates/news/: article_content.html  base.html  index.html  news_list.html  news_ua.html
assistant/users/: urls.py
assistant/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
